Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16801

lnet/api-ni.c In function 'lnet_net_cmd': error: the frame size of 1128 bytes is larger than 1024 bytes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      https://build.whamcloud.com/job/lustre-reviews/94473/arch=x86_64,build_type=client,distro=ubuntu2004,ib_stack=inkernel/console

      13:28:04 /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2004/ib_stack/inkernel/BUILD/lustre-2.15.54_141_ged8d7f8/lnet/lnet/api-ni.c: In function 'lnet_net_cmd':
      13:28:04 /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2004/ib_stack/inkernel/BUILD/lustre-2.15.54_141_ged8d7f8/lnet/lnet/api-ni.c:5377:1: error: the frame size of 1128 bytes is larger than 1024 bytes [-Werror=frame-larger-than=]
      

      This is a build failure on a patch under review, but I think it warrants a separate fix.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: