LU-16801 lnet: Use dynamic allocation for LND tunables

Increasing size of lnet_ioctl_config_lnd_tunables can cause us to
trip Werror=frame-larger-than warning in lnet_net_cmd() and its
call to static function lnet_genl_parse_local_ni() (seen on
ubuntu2004 and ubuntu2204.) Dynamically allocate this memory instead.

Also modify how LND tunables are initialized in
handle_yaml_config_ni() to match what is done in
lnet_genl_parse_local_ni().

Test-Parameters: trivial
Signed-off-by: Chris Horn <chris.horn@hpe.com>
Change-Id: I6d169ac44521e98958feee70fc5ed73ffb8a7fcd
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/50872
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>